force-app/main/default/objects/Txn_Log__c/Txn_Log__c.object-meta.xml
<CustomObject>
    <label>Transaction Log</label>
    <nameField>
        <displayFormat>TL-{000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>