force-app/main/default/objects/Txn_Log__c/fields/Link_To_Record__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Record__c</fullName>
    <formula>IF(AND( NOT(ISBLANK(Record_Id__c)), LEN(Record_Id__c) = 18), HYPERLINK(&quot;/&quot; &amp; Record_Id__c, &quot;Open record&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link To Record</label>
    <type>Text</type>
</CustomField>