force-app/main/default/objects/Txn_Log__c/fields/Record_Action__c.field-meta.xml
<CustomField>
    <fullName>Record_Action__c</fullName>
    <label>Record Action</label>
    <length>100</length>
    <type>Text</type>
</CustomField>