force-app/main/default/objects/Txn_Log__c/fields/Transaction_Context__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Context__c</fullName>
    <label>Transaction Context</label>
    <length>100</length>
    <type>Text</type>
</CustomField>